--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
 		<audio id="sound1" src="music/background.mp3" hidden></audio>
 		<audio id="sound2" src="music/win_sound.mp3" hidden></audio>
 		<audio id="sound3" src="music/lose_sound.mp3" hidden></audio>
-		<audio id="coinSound" src="music/coin.mp3" hidden></audio>
+		<audio id="sound4" src="music/coin.mp3" hidden></audio>
 
 		<div class="col1 column">
 			<p id="txt_you_score">Your Score:</p>
@@ -30,10 +30,10 @@
 		<div id="game" class="col2 column">
 			<div id="start">S</div>
 			<div class="boundary" id="boundary1"></div>
-			<div class="boundary"></div>
-			<div class="boundary"></div>
-			<div class="boundary"></div>
-			<div class="boundary"></div>
+			<div class="boundary" id="boundary2"></div>
+			<div class="boundary" id="boundary3"></div>
+			<div class="boundary" id="boundary4"></div>
+			<div class="boundary" id="boundary5"></div>
 			<div id="end">E</div>
 		</div>
 
@@ -41,6 +41,9 @@
 			<img class="circle" src="images/circle.png" alt="">
 			<h1 id="display_timer">05</h1>
 		</div>
+
+		<img src="images/star.png" class="coin" id="coin1" alt="coin">
+		<img src="images/star.png" class="coin" id="coin2" alt="coin">
 
 	</div>
 
